# cac

./: Cargo.toml  LICENSE  README.md  create-release.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: app.rs  git.rs  main.rs  ui.rs
