[package]
name = "cac"
version = "1.1.0"
edition = "2024"
description = "Amend your latest git commit with co-authors discovered from git history"
license = "MIT"
repository = "https://github.com/tomhuettmann/cac"
authors = ["Tom Hüttmann"]

[dependencies]
git2 = { version = "0.21", features = ["vendored-libgit2", "vendored-openssl"] }
ratatui = "0.30"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
fuzzy-matcher = "0.3"
anyhow = "1"
